# embassy-latency

./: Cargo.toml
.cargo/: config.toml
